Fixing incorrectly aligned clear button in search bar

--- a/client/src/styles/components/sidebar.less
+++ b/client/src/styles/components/sidebar.less
@@ -119,7 +119,7 @@
 
         .input-group-btn
         {
-            @media(min-width: @screen-sm-min) {width: 25px;}
+            @media(min-width: @screen-sm-min) {width: 24px;}
         }
 
         .btn-default
